fix: Selected control is not visible in outline

--- a/packages/control-property-editor/src/App.scss
+++ b/packages/control-property-editor/src/App.scss
@@ -55,6 +55,7 @@ body {
 .app-panel-scroller {
     overflow-y: auto;
     overflow-x: hidden;
+    height: 85%;
 }
 
 .app-panel-left {
