--- a/packages/control-property-editor/src/panels/outline/OutlinePanel.scss
+++ b/packages/control-property-editor/src/panels/outline/OutlinePanel.scss
@@ -1,11 +1,8 @@
 .filter-outline {
     display: flex;
-    padding: 15px 14px 15px 14px;
     flex-direction: row;
     align-items: center;
-    position: sticky;
-    top: 0px;
-    z-index: 1;
+    padding: 4%;
     background-color: var(--vscode-sideBar-background);
 }
 
